# Ultra-Light-Fast-Generic-Face-Detector-1MB

./: convert_to_onnx.py
models/onnx/: version-RFB-640.onnx  version-slim-640.onnx
opencv_dnn/: CMakeLists.txt
opencv_dnn/src/: cv_dnn_ultraface.cpp  main.cpp  speed_test.cpp
